--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -293,20 +293,15 @@ In this manuscript, we will focus only on ICRH and LHCD systems. Moreover, we wi
 \subsubsection{Ion Cyclotron Resonance Frequency}
 The resonance between the natural cyclotron motion of an ion in a static magnetic field with an electromagnetic wave having the same (gyro)frequency have been recognized early in the magnetic fusion research as a bulk plasma heating method\sidecite[-1cm]{berger1958, stix1958}. Experimental confirmations rapidly confirmed the theoretical findings\sidecite{stix1958-1, stix1960, hooke1961, rothman1969}. Nowadays, ICRH is the RF heating scheme whose highest powers have been coupled, with for example up to 16.5~\si{MW} in JET \sidecite[+1cm]{jacquinot1999}. ICRH is used in almost all present day tokamaks at multi-\si{MW} level and it is likely it will  play an important role in next generation experiments and fusion reactors.
 
-Hot plasmas being weakly collisional, FR waves damping have to rely on collision-less wave-particle mechanisms. 
+%Hot plasmas being weakly collisional, waves damping have to rely on collision-less wave-particle mechanisms. Absorption of the ICRF wave power in the ion cyclotron range of frequency can happen by three mechanisms: minority heating, harmonic heating or mode conversion. 
 
-Absorption of the ICRF wave power in the ion cyclotron range of frequency
-can happen by three mechanisms: minority heating, harmonic heating or mode
-conversion. 
+The physical heating mechanisms at play at the ion cyclotron resonance is not as evident as the naming seems to imply. They are reviewed in much more details in \sidecite{perkins1984, becoulet1996}. In a single species plasma, the plasma wave which is used to propagate the RF power from the edge to the plasma centre has two possible circularly polarized components. One is rotating in the direction of the cyclotron rotation of the ions and one rotating in the direction of the electrons. A rotating ion sees in its frame of reference a constant electric field that can accelerate (or decelerate) it, depending on the phase of the electric field (i.e. its direction) with respect to the instantaneous speed of the ion \sidecite{Freidberg2007}. However, at the location of the resonance, the amplitude of the former component whose electrical field is rotating is the direction the ions vanishes and no absorption occurs. 
 
-The physical heating mechanisms at play at the ion cyclotron resonance is not as evident as the naming seems to imply. They are reviewed in much more details in \sidecite{perkins1984, becoulet1996}. In a single species plasma, the plasma wave which is used to propagate the RF power from the edge to the plasma centre has two possible circularly polarized components. One is rotating in the direction of the cyclotron rotation of the ions and one rotating in the direction of the electrons. A rotating ion sees in its frame of reference a constant electric field that can accelerate (or decelerate) it, depending on the phase of the electric field (i.e. its direction) with respect to the instantaneous speed of the ion\sidecite{Freidberg2007}. However, at the location of the resonance, the amplitude of the former component whose electrical field is rotating is the direction the ions vanishes and no absorption occurs. 
+Fusion scientists then have discovered that inside the plasma, the polarization of the wave is mainly set by the dominant species, while the absorption depends on the resonant species. If the dominant species is different from the resonant species, then the component of the wave with the right polarization at the resonance (of the resonant species) is different from zero. Once absorbed, the minority species then transfers its energy to the bulk plasma by Coulomb collisions. This method is called \textit{minority heating} \sidecite{perkins1984} and is one of the most used in tokamaks\cite{jacquinot1999}. For example in most Tore Supra/WEST scenarios, plasma consists in deuterium (D) as a majority specie, with few percent in ratio of hydrogen (H) as a minority species \sidecite{bourdelle2015}. 
 
-Fusion scientists then have discovered that inside the plasma, the polarization of the wave is mainly set by the dominant species, while the absorption depends on the resonant species. If the dominant species is different from the resonant species, then the component of the wave with the right polarization at the resonance (of the resonant species) is different from zero. Once absorbed, the minority species then transfers its energy to the bulk plasma by Coulomb collisions. This method is called \textit{minority heating} \sidecite{perkins1984} and is one of the most used in tokamaks\cite{jacquinot1999}. For example in most Tore Supra/WEST scenarios, plasma consists in deuterium (D) as a majority specie, with few percent in ratio of hydrogen (H) as a minority species\sidecite{bourdelle2015}. 
+It is also possible to use higher harmonics of the cyclotron resonance to heat the plasma ions, i.e. $\omega = N \Omega_{ci}$ with $N$ an integer larger than 1. This method is called \textit{harmonic heating} and actually was combined with minority heating since the beginning of ICRH experiments \sidecite{jacquinot1977, hosea1979}. The theoretical analysis shows that good accessibility persists and that a reasonable portion of the wave has the proper in-phase polarization for strong wave–particle resonance. However, the damping rate depends sensitively on temperature and density and thus is not as robust and reliable as one might like\cite{Freidberg2007}. 
 
-It is also possible to use higher harmonics of the cyclotron resonance to heat the plasma ions, i.e. $\omega = N \Omega_{ci}$ with $N$ an integer larger than 1. This method is called \textit{harmonic heating} and actually was combined with minority heating since the beginning of ICRH experiments\sidecite{jacquinot1977, hosea1979}. The theoretical analysis shows that good accessibility persists and that a reasonable portion of the wave has the proper in-phase polarization for strong wave–particle resonance. However, the damping rate depends sensitively on temperature and density and thus is not as robust and reliable as one might like\cite{Freidberg2007}. 
-
-Power can also be absorbed directly by the electrons by Landau damping/Transit Time Magnetic Pumping or linear mode conversion to Ion
-Bernstein Waves (IBW) \sidecite{stix1965, brambilla1985}. Recent developments use a combination of three ions to integrate a minority heating with mode conversion scenarios. A mix of two majority ions leads to a mode conversion layer where the amplitude of the electric field of the wave with the right polarization is increased. Locating this layer at the position of the resonance of a third, minority species can lead to strong absorption by this minority and highly accelerated ions\sidecite{ongena2017}.
+Power can also be absorbed directly by the electrons by Landau damping/Transit Time Magnetic Pumping or linear mode conversion to Ion Bernstein Waves (IBW) \sidecite{stix1965, brambilla1985}. Recent developments use a combination of three ions to integrate a minority heating with mode conversion scenarios. A mix of two majority ions leads to a mode conversion layer where the amplitude of the electric field of the wave with the right polarization is increased. Locating this layer at the position of the resonance of a third, minority species can lead to strong absorption by this minority and highly accelerated ions \sidecite{ongena2017}.
 
 Despite its relative good performances\sidecite{steinmetz1987}, ICRH is also known to have detrimental effects, among them the generation of metallic impurity in the plasma\sidecite{adam1987, noterdaeme1993, perkins1989}. As radiative losses ($P_{\mathrm{rad}}$ in Eq.\ref{eq:losses}) goes as the square of the electric charge of the ions, heavier metals impurity strikes the fusion power budget more than light elements. This problem of impurities had been solved in previous experiments by the use of graphite limiters and carbon-coated metallic surfaces. However, due to gas retention issues, these materials can't be used in future fusion reactor and plasma facing components equipping the experimental devices have been progressively changed to metallic ones, highlighting the impurity problem again\sidecite{ongena2017}.
 
@@ -316,10 +311,10 @@ Ion cyclotron was used to be promoted as the "cheapest" RF scheme since it has t
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Lower Hybrid Resonance Frequency}
-Originally, the occurrence of a wave resonance, the \emph{lower hybrid resonance}, has been anticipated to lead to strong wave-particle interaction through linear and non-linear mode conversion to a hot plasma wave\sidecite{stix1992}. With an appropriate RF launcher conceived to excite cold plasma waves, these would propagate into the plasma until reaching the lower hybrid resonant layer at $\omega_{LH}$. This resonance exists in tokamak plasma in the region close to the ion plasma frequency $\omega_{pi}/2\pi$, which lies in the lower end of the microwave band (1-5~GHz). At this layer, the perpendicular group velocity vanishes and the waves can convert into a hot plasma mode which is absorbed. This heating technique, known as \emph{Lower Hybrid plasma Ion Heating} (LHIH) or \emph{Lower Hybrid Resonance Heating} (LHRH), was the originally experimentally investigated method in the 70'\sidecite{bellan1974, hooke1972, golant1972, tonon1977}. Different physical mechanisms have been invoked to explain the energy absorption, such as stochastic Ion Heating in \citeauthyear{karney1978} and quasi-linear electron Landau damping in \citeauthyear{brambilla1983}.
+Originally, the occurrence of a wave resonance, the \emph{lower hybrid resonance}, has been anticipated to lead to strong wave-particle interaction through linear and non-linear mode conversion to a hot plasma wave \sidecite{stix1992}. With an appropriate RF launcher conceived to excite cold plasma waves, these would propagate into the plasma until reaching the lower hybrid resonant layer at $\omega_{LH}$. This resonance exists in tokamak plasma in the region close to the ion plasma frequency $\omega_{pi}/2\pi$, which lies in the lower end of the microwave band (1-5~GHz). At this layer, the perpendicular group velocity vanishes and the waves can convert into a hot plasma mode which is absorbed. This heating technique, known as \emph{Lower Hybrid plasma Ion Heating} (LHIH) or \emph{Lower Hybrid Resonance Heating} (LHRH), was the originally experimentally investigated method in the 70' \sidecite{bellan1974, hooke1972, golant1972, tonon1977}. Different physical mechanisms have been invoked to explain the energy absorption, such as stochastic Ion Heating in \citeauthyear{karney1978} and quasi-linear electron Landau damping in  \citeauthyear{brambilla1983}.
 
 
-In the 80', effective ion heating had only been obtained in a small number of experiments and research along the application of LH waves towards bulk ion heating were slowing down\sidecite{gormezano1986, porkolab1984, tonon1984}. The reason for this is that bulk ion heating near the mode conversion layer appeared to be less reproducible and more difficult to achieve than electron heating. Indeed, as the wave frequency gets closer to the lower hybrid frequency, the shorter wavelength waves may be more effectively absorbed and/or scattered near the plasma surface by non-linear effects such as parametric instabilities, low-frequency fluctuations, etc. Moreover, for LH bulk ion heating, the unconfined ions impinging on the wall induced a large amount of metallic impurities and then the increase of power radiated by the plasma.
+In the 80', effective ion heating had only been obtained in a small number of experiments and research along the application of LH waves towards bulk ion heating were slowing down \sidecite{gormezano1986, porkolab1984, tonon1984}. The reason for this is that bulk ion heating near the mode conversion layer appeared to be less reproducible and more difficult to achieve than electron heating. Indeed, as the wave frequency gets closer to the lower hybrid frequency, the shorter wavelength waves may be more effectively absorbed and/or scattered near the plasma surface by non-linear effects such as parametric instabilities, low-frequency fluctuations, etc. Moreover, for LH bulk ion heating, the unconfined ions impinging on the wall induced a large amount of metallic impurities and then the increase of power radiated by the plasma.
 
 Rather than trying to heat ions, it was theorized postulated that high phase velocity waves travelling in the direction parallel to the magnetic field could interact quasi-linearly by Landau interaction with the electrons population, and, by using an asymmetric spectrum could drive a large amount additional of toroidal plasma current \sidecite{fisch1978}. In the same fashion that for LHRH, the RF power is coupled to the plasma via launchers made of rectangular waveguides stacked periodically in the horizontal direction parallel to the toroïdal magnetic field. However, at the contrary of LHRH launchers, the LH waves are launched preferentially in one toroidal direction by mean of a phased array. The LH wave excited by such an array has an asymmetric parallel spectrum. The LH waves create an asymmetry in the electron distribution, which ultimately results in a net electric current \sidecite{fisch1987}. This technique is known as \emph{Lower Hybrid Current Drive} and despite the fact that the Lower Hybrid resonance is not any more involved in the use of this method in tokamaks, the term remained. LHCD has been confirmed on the PLT tokamak in 1982 \sidecite{bernabei1982} and in Alcator-C in 1984 \sidecite{porkolab1984}. 
 
